# irony-mode

./: .clang-format  .clang_complete  .dir-locals.el  .eproject  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  IPlugin.hh  Makefile  README.md  TODO  TODO.org  irony-ast.el  irony-cdb-clang-complete.el  irony-cdb-clang.el  irony-cdb-json.el  irony-cdb-libclang.el  irony-cdb-server.el  irony-cdb.el  irony-completion.el  irony-diagnostics.el  irony-eldoc.el  irony-exprtype.el  irony-iotask.el  irony-pp.el  irony-server.rst  irony-snippet.el  irony-xref.el  irony.el  selection sort
cmake/: FindLibClang.cmake  utils.cmake
docs/: CMakeLists.txt  irony-server.cfg.in
elisp/: irony-cdb.el  irony-completion.el  irony-header-comp.el  irony-pp.el  irony-snippet.el  irony-syntax-check.el  irony.el
elisp/irony/: ac.el  compilation-db.el  eproject.el  irony-ac-header-comp.el  irony-eproject.el
elisp/plugins/: irony-ac-header-comp.el  irony-ac-simple.el  irony-ac.el  irony-cmake.el  irony-flycheck.el
lib/: CMakeLists.txt  README.md
lib/str/: to_string.hpp  wstring_to_string.cpp  wstring_to_string.h
lib/util/: JSONObjectWrapper.cpp  JSONObjectWrapper.h  NonCopyable.h  arraysize.hpp
server/: .clang-tidy  .clang_complete  CMakeLists.txt  ClangString.cpp  ClangString.h  IPlugin.cpp  IPlugin.h  Makefile  QuotedCXString.cpp  QuotedCXString.h  Server.cpp  Server.h  Server.hh  TUManager.cpp  TUManager.h  TUManager.hh  main.cpp  run-clang-tidy.py
server/build-aux/run-clang-tidy/: LICENSE.TXT  README
server/cmake/: CheckClangResourceDir.cmake  CheckLibClangBuiltinHeadersDir.cmake  LibClangDiagnosticsChecker.c  LibClangDiagnosticsChecker.cpp  utils.cmake
server/cmake/modules/: FindLibClang.cmake
server/docs/: CMakeLists.txt  irony-server.cfg.in
server/lib/str/: to_string.h  wstring_to_string.cpp
server/lib/util/: JSONObjectWrapper.h
server/plugins/: CacheInvalidation.cpp  CacheInvalidation.h  CodeCompletion.cpp  CodeCompletion.h  CodeCompletion.hh  CompileChecker.cpp  CompileChecker.h  SyntaxChecker.cpp  SyntaxChecker.h  SyntaxChecker.hh
server/src/: CMakeLists.txt  Command.cpp  Command.def  Command.h  Commands.def  CompDBCache.cpp  CompDBCache.h  CompilationDatabase.cpp  CompilationDatabase.h  Database.cpp  Database.h  IPlugin.h  Irony.cpp  Irony.h  Server.cpp  Server.h  Style.h  TUManager.cpp  TUManager.h  main.cpp
server/src/plugins/: CacheInvalidation.cpp  CacheInvalidation.h  CompileChecker.cpp  CompileChecker.h
server/src/support/: CIndex.h  CommandLineParser.cpp  CommandLineParser.h  NonCopyable.h  Sexp.cpp  Sexp.h  Sexp_CursorKind.cpp  Sexp_TypeKind.cpp  TemporaryFile.cpp  TemporaryFile.h  arraysize.h  iomanip_quoted.h
server/test/: CMakeLists.txt
server/test/elisp/: CMakeLists.txt  after.json  before.json  compile_commands.json  irony-cdb-json.el  irony-cdb-server.el  irony-cdb.el  irony-iotask.el  irony.el  test-config.el  test-irony-cdb.el  test-irony.el  with_quote.json
test/elisp/: CMakeLists.txt  test-config.el  test-irony-cdb.el  test-irony.el  tests.el
test/elisp/irony/: CMakeLists.txt  test-compilation-db.el
utils/: DLLoader.hpp  JSONObjectWrapper.cpp  JSONObjectWrapper.hh  Makefile  PluginLoader.hpp  array_to_container.hpp  to_string.hpp  utility.hpp  wstring_to_string.cpp  wstring_to_string.hh
